--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "mkp-es-snapshot",
   "version": "1.0.0",
-  "main": "handler.js",
   "dependencies": {
     "async": "^2.0.1",
-    "aws-lambda-config": "0.0.1",
     "dateformat": "^1.0.12",
     "elasticsearch": "^11.0.1"
   },
   "devDependencies": {
-    "jasmine": "^2.5.2"
+    "eslint": "^3.12.2",
+    "eslint-config-google": "^0.7.1",
+    "istanbul": "^0.4.5",
+    "jasmine": "^2.5.2",
+    "jasmine-spec-reporter": "^2.7.0"
   },
   "scripts": {
-    "test": "node_modules/.bin/jasmine spec/*"
+    "test": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover jasmine",
+    "posttest": "eslint src/"
   }
 }
